fixed css overlap with AA

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -52,7 +52,7 @@ footer {
   margin: 5px;
 }
 
-.panel {
+.square {
   width: 300px;
   height: 250px;
 }
